fix: double border while hover and focus on .popup__list-element

--- a/submissions/aymkin/HTML-CSS-Popup/style/style.css
+++ b/submissions/aymkin/HTML-CSS-Popup/style/style.css
@@ -172,7 +172,7 @@
 }
 
 .popup__list-element:hover {
-    border: 1px solid #ddd;
+    text-decoration: underline;
 }
 
 .popup-a {
